--- a/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
+++ b/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
@@ -39,8 +39,17 @@ tr > td {
     width: 100%;
     height: 100%;
     background-color:#0c0f21;
-    /* Add any additional styles you need for your div */
 }
 h2 {
     color:grey;
+}
+.encased-div {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Adjust the number of columns as needed */
+    gap: 0px; /* Adjust the gap between grid items as needed */
+}
+
+.grid-item {
+    padding: 20px;
+    text-align: center;
 }
