--- a/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
+++ b/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
@@ -7,7 +7,7 @@ table tbody tr:hover td {
 }
 
 tr {
-    background-color: black;
+    background-color: #0c0f21;
     margin-bottom: 5px;
 }
 table th,
