--- a/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
+++ b/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
@@ -1,18 +1,18 @@
 tr:hover {
-    background-color: midnightblue;
+    background-color: gray;
     cursor: pointer;
 }
 table tbody tr:hover td {
-    color: white; /* This will set the text color for all cells in the hovered row */
+    /*color: white; !* This will set the text color for all cells in the hovered row *!*/
 }
 
 tr {
-    background-color: #0c0f21;
+    /*background-color: #0c0f21;*/
     margin-bottom: 5px;
 }
 table th,
 table td {
-    color: grey;
+    /*color: grey;*/
 }
 table {
     border-collapse: separate;
@@ -26,19 +26,19 @@ tr > td {
     padding: 0;
     height: 100%;
     width: 100%;
-    background-color:#0c0f21;
+    /*background-color:#0c0f21;*/
 }
 .film-html{
     margin: 0;
     padding: 0;
     height: 100%;
     width: 100%;
-    background-color:#0c0f21;
+    /*background-color:#0c0f21;*/
 }
 .full-page-div {
     width: 100%;
     height: 100%;
-    background-color:#0c0f21;
+    /*background-color:#0c0f21;*/
 }
 h2 {
     color:grey;
