--- a/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
+++ b/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
@@ -1,19 +1,16 @@
-tr:hover {
-    background-color: gray;
+ tr:hover {    
     cursor: pointer;
 }
 table tbody tr:hover td {
-    /*color: white; !* This will set the text color for all cells in the hovered row *!*/
+    color: darkgrey;
 }
-
+/*
 tr {
-    /*background-color: #0c0f21;*/
+    background-color: #0c0f21;
     margin-bottom: 5px;
 }
 table th,
-table td {
-    /*color: grey;*/
-}
+
 table {
     border-collapse: separate;
     border-spacing: 0 0;
@@ -26,27 +23,27 @@ tr > td {
     padding: 0;
     height: 100%;
     width: 100%;
-    /*background-color:#0c0f21;*/
+    background-color:#0c0f21;
 }
 .film-html{
     margin: 0;
     padding: 0;
     height: 100%;
     width: 100%;
-    /*background-color:#0c0f21;*/
+    background-color:#0c0f21;
 }
 .full-page-div {
     width: 100%;
     height: 100%;
-    /*background-color:#0c0f21;*/
+    background-color:#0c0f21;
 }
 h2 {
     color:grey;
 }
 .encased-div {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Adjust the number of columns as needed */
-    gap: 0px; /* Adjust the gap between grid items as needed */
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px;
 }
 
 .grid-item {
@@ -56,4 +53,4 @@ h2 {
 .center-div
 {
     text-align: center;
-}
+} */
