--- a/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
+++ b/filmu-nuoma-web/src/pages/FilmSystem/FilmStyle.css
@@ -4,6 +4,15 @@
 table tbody tr:hover td {
     color: darkgrey;
 }
+.form-container {
+    max-width: 400px;
+    margin: auto;
+    margin-top: 50px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
 /*
 tr {
     background-color: #0c0f21;
